src/test/error/import6.lns
import test.error.Sub6;

let hoge = new Sub6.Test(0);
print( hoge.val );

